feat: remove payment integration guide and subscription implementation documentation
- Deleted PAYMENT_INTEGRATION_GUIDE.md and SUBSCRIPTION_IMPLEMENTATION.md as part of the refactor.
- Added .env.local.example for environment variable configuration.
- Created DEPLOYMENT.md to guide frontend deployment on Vercel.
- Updated next.config.ts to use remotePatterns for image optimization and added experimental features.
- Enhanced package.json with linting and build scripts.
- Refactored API calls in UserAvatar, itinerary, preferences, profile, signin, and signup pages to use centralized API configuration.
- Introduced api.ts and config.ts for better API management and environment variable handling.
- Updated tsconfig.json for stricter type checking.
- Modified vercel.json to use Node.js 20.x runtime.
- Removed unnecessary run.bat script and empty readme.md.

--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -7,7 +7,7 @@
   "regions": ["iad1"],
   "functions": {
     "src/app/api/**/*.ts": {
-      "runtime": "nodejs18.x"
+      "runtime": "nodejs20.x"
     }
   },
   "headers": [
@@ -25,6 +25,10 @@
         {
           "key": "X-XSS-Protection",
           "value": "1; mode=block"
+        },
+        {
+          "key": "Referrer-Policy",
+          "value": "origin-when-cross-origin"
         }
       ]
     }
