--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,9 +7,10 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "export": "next export",
+    "lint:fix": "next lint --fix",
     "type-check": "tsc --noEmit",
-    "vercel-build": "npm run build"
+    "vercel-build": "npm run type-check && npm run build",
+    "postbuild": "next-sitemap"
   },
   "dependencies": {
     "@react-three/drei": "^10.5.1",
