--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,7 +9,7 @@
     "lint": "next lint",
     "lint:fix": "next lint --fix",
     "type-check": "tsc --noEmit",
-    "vercel-build": "npm run build"
+    "vercel-build": "next build"
   },
   "dependencies": {
     "@react-three/drei": "^10.5.1",
