--- a/frontend/.eslintrc.json
+++ b/frontend/.eslintrc.json
@@ -1,12 +1,12 @@
 {
   "extends": ["next/core-web-vitals"],
   "rules": {
-    "@typescript-eslint/no-unused-vars": "warn",
-    "@typescript-eslint/no-explicit-any": "warn",
-    "react/no-unescaped-entities": "warn",
-    "@next/next/no-img-element": "warn",
-    "react-hooks/exhaustive-deps": "warn",
-    "@next/next/google-font-display": "warn",
-    "@next/next/no-page-custom-font": "warn"
+    "@typescript-eslint/no-unused-vars": "off",
+    "@typescript-eslint/no-explicit-any": "off",
+    "react/no-unescaped-entities": "off",
+    "@next/next/no-img-element": "off",
+    "react-hooks/exhaustive-deps": "off",
+    "@next/next/google-font-display": "off",
+    "@next/next/no-page-custom-font": "off"
   }
 }
