--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,11 +14,13 @@
   "dependencies": {
     "@react-three/drei": "^10.5.1",
     "@react-three/fiber": "^9.2.0",
+    "@tabler/icons-react": "^3.34.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "framer-motion": "^12.23.12",
     "lucide-react": "^0.534.0",
+    "motion": "^12.23.12",
     "next": "15.4.1",
     "react": "19.1.0",
     "react-date-range": "^2.0.1",
@@ -26,6 +28,7 @@
     "react-i": "^0.2.1",
     "react-icons": "^5.5.0",
     "react-masonry-css": "^1.0.16",
+    "react-wrap-balancer": "^1.1.1",
     "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
