--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-  "dev": "next dev",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
@@ -28,6 +28,7 @@
     "react-i": "^0.2.1",
     "react-icons": "^5.5.0",
     "react-masonry-css": "^1.0.16",
+    "react-simple-typewriter": "^5.0.1",
     "react-wrap-balancer": "^1.1.1",
     "tailwind-merge": "^3.3.1"
   },
